<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.krushik.android.student.MainActivity"><![CDATA[

    TextView
        android:id="@+id/tvFirstName"
        android:onClick="OnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/student_name"/>

    TextView
        android:id="@+id/tvLastName"
        android:onClick="OnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvFirstName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/student_surname"/>

    TextView
        android:id="@+id/tvAge"
        android:onClick="OnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvLastName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/student_age"/>





    ]]>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_student"
        android:onClick="OnClick"
        android:id="@+id/btnAddStudent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvAge"/>
    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView"
        android:groupIndicator="@null"
        android:layout_below="@+id/btnAddStudent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>



</RelativeLayout>
